--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -6057,10 +6057,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-08-02T05:02:56.344Z"
+     "end_time": "2023-08-02T05:08:37.772781Z",
+     "start_time": "2023-08-02T05:03:06.952665Z"
     }
    },
    "outputs": [
@@ -6069,7 +6070,9 @@
      "output_type": "stream",
      "text": [
       "A file already exists with this name.\n",
-      "\n"
+      "\n",
+      "Do you want to overwrite? (Y/N)y\n",
+      "Writing file.  \"../data\\ski_data_cleaned.csv\"\n"
      ]
     }
    ],
@@ -6081,13 +6084,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-08-02T05:02:56.347Z"
+     "end_time": "2023-08-02T05:08:39.570016Z",
+     "start_time": "2023-08-02T05:08:37.776741Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A file already exists with this name.\n",
+      "\n",
+      "Do you want to overwrite? (Y/N)y\n",
+      "Writing file.  \"../data\\state_summary.csv\"\n"
+     ]
+    }
+   ],
    "source": [
     "# save the state_summary separately.\n",
     "datapath = '../data'\n",
