--- a/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Notebooks/03_exploratory_data_analysis.ipynb
@@ -4651,8 +4651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Here we did some exploratory analysis of the data. There is a big variation between state and ticket price.\n",
-    "The total number of numerical features included is 28.  Among the features, from the correlation plot,  `fastQuads`, `Runs` and `Snow Making_ac` stand out. Of the new features,  `resort_night_skiing_state_ratio`seems the most correlated with ticket price. As well as `Runs`, `total_chairs` is quite well correlated with ticket price."
+    "**A: 1** During the exploratory analysis, we identified significant variations between state and ticket prices. The dataset contains 28 numerical features. Notably, fastQuads, Runs, and Snow Making_ac showed strong correlations. The newly engineered feature resort_night_skiing_state_ratio also exhibited a notable correlation with ticket prices. Additionally, Runs and total_chairs were relatively well-correlated with ticket prices."
    ]
   },
   {
